--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
         <div class="carousel-slide">
             <div style="background-color: gray;" class="carousel-item">
                 <img src="image3.jpg" alt="Produto 3">
-                <h3>Hamburguer de Bacon</h3>
-                <p>Tem bacon</p>
+                <h3>Programação</h3>
+                <p>Programação</p>
             </div>
             <div style="background-color: gray;" class="carousel-item">
                 <img src="image3.jpg" alt="Produto 3">
-                <h3>Hamburguer de Bacon</h3>
-                <p>Tem bacon</p>
+                <h3>Front-end</h3>
+                <p>Front-end</p>
             </div>
             <div style="background-color: gray;" class="carousel-item">
                 <img src="image3.jpg" alt="Produto 3">
-                <h3>Hamburguer de Bacon</h3>
-                <p>Tem bacon</p>
+                <h3>Infraestrutura</h3>
+                <p>Infraestrutura</p>
             </div>
             <div style="background-color: gray;" class="carousel-item">
                 <img src="image3.jpg" alt="Produto 3">
-                <h3>Hamburguer de Bacon</h3>
-                <p>Tem bacon</p>
+                <h3>Business</h3>
+                <p>Business</p>
             </div>
             <div style="background-color: gray;" class="carousel-item">
                 <img src="image3.jpg" alt="Produto 3">
-                <h3>Hamburguer de Bacon</h3>
-                <p>Tem bacon</p>
+                <h3>Design & UX</h3>
+                <p>Design & UX</p>
             </div>
             <!-- Adicione mais itens de carrossel conforme necessário -->
         </div>
