--- a/index.html
+++ b/index.html
@@ -1,124 +1,96 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Programação</title>
+  <meta charset="UTF-8">
+  <title>Meu Site</title>
+  <link rel="stylesheet" href="styles.css">
+
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick-theme.css"/>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="logo">Logo</div>
-            <div class="search">
-                <input type="text" placeholder="Pesquisar">
-                <button>Buscar</button>
-            </div>
-            <div class="menu">
-                <input type="checkbox" id="menu-toggle">
-                <label for="menu-toggle" class="menu-icon">&#9776;</label>
-                <ul class="menu-list">
-                    <!-- ... (itens de menu) ... -->
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Produtos</a></li>
-                    <li><a href="#">Sobre</a></li>
-                    <li><a href="#">Contato</a></li>
-                </ul>
-            </div>
-        </nav>
-    </header>
-    <div class="banner">
-        <img src="banner.jpg" alt="Banner">
+  <header>
+    <h1>Meu Site</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Página Inicial</a></li>
+        <li><a href="#">Sobre</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <div class="banner">
+    <img src="Kiry.png" alt="Banner">
+    <div class="banner-content">
     </div>
-    <div class="carousel-container">
-        <div class="carousel-slide">
-            <div style="background-color: gray;" class="carousel-item">
-                <img src="image1.jpg" alt="Produto 3">
-                <h3>Programação</h3>
-                <p>Programação</p>
-            </div>
-            <div style="background-color: gray;" class="carousel-item">
-                <img src="image1.jpg" alt="Produto 3">
-                <h3>Front-end</h3>
-                <p>Front-end</p>
-            </div>
-            <div style="background-color: gray;" class="carousel-item">
-                <img src="image1.jpg" alt="Produto 3">
-                <h3>Infraestrutura</h3>
-                <p>Infraestrutura</p>
-            </div>
-            <div style="background-color: gray;" class="carousel-item">
-                <img src="image1.jpg" alt="Produto 3">
-                <h3>Business</h3>
-                <p>Business</p>
-            </div>
-            <div style="background-color: gray;" class="carousel-item">
-                <img src="image1.jpg" alt="Produto 3">
-                <h3>Design & UX</h3>
-                <p>Design & UX</p>
-            </div>
-            <!-- Adicione mais itens de carrossel conforme necessário -->
-        </div>
-    </div>
+  </div>
 
-    <div class="carousel-controls">
-        <div class="carousel-control" onclick="prevSlide()">&#10094;</div>
-        <div class="carousel-control" onclick="nextSlide()">&#10095;</div>
-    </div>
-    <script>
-        // Restante do seu código aqui
+  <main>
+    <section>
+      <h2>Bem-vindo ao meu site!</h2>
+      <div class="carousel">
+        <div><img src="imagem1.jpg" alt="Imagem 1"></div>
+        <div><img src="imagem2.jpg" alt="Imagem 2"></div>
+        <div><img src="imagem3.jpg" alt="Imagem 3"></div>
+        <div><img src="imagem4.jpg" alt="Imagem 4"></div>
+        <div><img src="imagem5.jpg" alt="Imagem 5"></div>
+        <div><img src="imagem6.jpg" alt="Imagem 6"></div>
+        <div><img src="imagem1.jpg" alt="Imagem 1"></div>
+        <div><img src="imagem2.jpg" alt="Imagem 2"></div>
+        <div><img src="imagem3.jpg" alt="Imagem 3"></div>
+        <div><img src="imagem4.jpg" alt="Imagem 4"></div>
+      </div>
+      
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+      <script>
+        $(document).ready(function(){
+          $('.carousel').slick({
+            dots: true,
+            infinite: true,
+            speed: 300,
+            slidesToShow: 3,
+            slidesToScroll: 3,
+            responsive: [
+              {
+                breakpoint: 1024,
+                settings: {
+                  slidesToShow: 2,
+                  slidesToScroll: 2,
+                  infinite: true,
+                  dots: true
+                }
+              },
+              {
+                breakpoint: 600,
+                settings: {
+                  slidesToShow: 1,
+                  slidesToScroll: 1
+                }
+              }
+            ]
+          });
+        });
+      </script>
 
-        // Funções para controlar o carrossel
-        var carouselSlide = document.querySelector(".carousel-slide");
-        var carouselItems = document.querySelectorAll(".carousel-item");
-        var currentIndex = 0;
 
-        function showSlide(index) {
-            currentIndex = index;
-            var translateX = -currentIndex * (100 / carouselItems.length);
-            carouselSlide.style.transform = `translateX(${translateX}%)`;
-        }
-
-        function nextSlide() {
-            currentIndex = (currentIndex + 1) % carouselItems.length;
-            showSlide(currentIndex);
-        }
-
-        function prevSlide() {
-            currentIndex = (currentIndex - 1 + carouselItems.length) % carouselItems.length;
-            showSlide(currentIndex);
-        }
-    </script>
-        <h2>Categorias</h2>
-        <ul class="cat">
-            <li><a href="#">Programação</a></li>
-            <li><a href="#">Front-end</a></li>
-            <li><a href="#">Infraestrutura</a></li>
-            <li><a href="#">Business</a></li>
-            <li><a href="#">Design & UX</a></li>
-        </ul>
+      <p>Escolha uma opção:</p>
+      <div class="button-container">
+        <a href="pagina1.html"><img src="imagem1.jpg" alt="Botão 1"></a>
+        <a href="pagina2.html"><img src="imagem2.jpg" alt="Botão 2"></a>
+        <a href="pagina3.html"><img src="imagem3.jpg" alt="Botão 3"></a>
+        <a href="pagina4.html"><img src="imagem4.jpg" alt="Botão 4"></a>
+        <a href="pagina5.html"><img src="imagem5.jpg" alt="Botão 5"></a>
+        <a href="pagina6.html"><img src="imagem6.jpg" alt="Botão 6"></a>
+      </div>
     </section>
-    <script>
-        // Restante do seu código aqui
-
-        function search() {
-            var searchTerm = document.getElementById("searchInput").value;
-            // Aqui você pode implementar a lógica de pesquisa, por exemplo, redirecionando para uma página de resultados de pesquisa.
-            // Por enquanto, vamos apenas mostrar uma mensagem de alerta com o termo de pesquisa.
-            alert("Você buscou por: " + searchTerm);
-        }
-        
-        function toggleCategoryMenu() {
-            // Implemente a lógica para mostrar/ocultar o menu de categorias aqui.
-        }
-
-        function comprar(produto) {
-            // Implemente a lógica de compra aqui, por exemplo, adicionar o produto ao carrinho.
-            alert("Você comprou o produto: " + produto);
-        }
-    </script>
-    <footer style="background-color: black;">
-        <p style="color: white;">&copy; 2023 Hellington</p>
-    </footer>
+  </main>
+  <p>.</p>
+  <p>.</p>
+  <p>.</p>
+  <footer>
+    <p>&copy; 2024 Meu Site</p>
+  </footer>
 </body>
 </html>
